[package]
name        = "rustraight"
version     = "0.4.2"
edition     = "2024"
description = "A simple 2D game library for Rust, inspired by DXLib"
license     = "MIT"
repository  = "https://github.com/tetorisou-spec/rustraight.git"
readme      = "README.md"
keywords    = ["game", "gamedev", "2d", "wgpu", "graphics"]
categories  = ["game-engines"]

[lib]
name = "rustraight"
path = "src/lib.rs"

[[bin]]
name = "rustraight_demo"
path = "src/main.rs"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Input_XboxController",
    "Win32_UI_HiDpi",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_XAudio2",
    "Win32_Devices_HumanInterfaceDevice",
] }
lewton = "0.10"

[dependencies]
wgpu              = "27"
raw-window-handle = "0.6"
fontdue  = "0.7"
